--- a/app/views/clientPreferenceSearch.scala.html
+++ b/app/views/clientPreferenceSearch.scala.html
@@ -1,5 +1,5 @@
 
-@(form: Form[ClientPreferenceDTO], postUrl: Call)(implicit request: MessagesRequestHeader)
+@(form: Form[ClientPreferenceSearchQuery], postUrl: Call)(implicit request: MessagesRequestHeader)
 
 @main("Hello World"){
     <h1>Client Preference Search</h1>
